Splash screen added.
Related Work Items: #51

--- a/src/MSHU.CarWash.UWP/App.xaml
+++ b/src/MSHU.CarWash.UWP/App.xaml
@@ -5,4 +5,17 @@
     xmlns:local="using:MSHU.CarWash.UWP"
     RequestedTheme="Light">
 
+    <Application.Resources>
+        <!-- Application-specific resources -->
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- 
+                    Styles that define common aspects of the platform look and feel
+                    Required by Visual Studio project and item templates
+                 -->
+                <ResourceDictionary Source="/Styles/Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
+
 </Application>
