--- a/src/MSHU.CarWash.UWP/Views/HomePage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/HomePage.xaml
@@ -8,28 +8,37 @@
     xmlns:views="using:MSHU.CarWash.UWP.Views"
     mc:Ignorable="d">
 
-    <RelativePanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="User:" x:Name="UserTextBlock" Margin="12"
+    <StackPanel>
+        <StackPanel.Background>
+            <ImageBrush Stretch="UniformToFill" Opacity="0.25"
+                    ImageSource="ms-appx:///Assets/Background.png"/>
+        </StackPanel.Background>
+
+        <RelativePanel Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+            <TextBlock Text="User:" x:Name="UserTextBlock" Margin="12"
                    RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignTopWithPanel="True" />
-        <TextBlock Text="Given name:" x:Name="GivenNameTextBlock" Margin="12"
+            <TextBlock Text="Given name:" x:Name="GivenNameTextBlock" Margin="12"
                    RelativePanel.AlignLeftWithPanel="True" RelativePanel.Below="UserTextBlock" />
-        <TextBlock Text="{Binding GivenName}" RelativePanel.RightOf="GivenNameTextBlock"
+            <TextBlock Text="{Binding GivenName}" RelativePanel.RightOf="GivenNameTextBlock"
                    RelativePanel.AlignVerticalCenterWith="GivenNameTextBlock"/>
-        <TextBlock Text="Family name:" x:Name="FamilyNameTextBlock" Margin="12"
+            <TextBlock Text="Family name:" x:Name="FamilyNameTextBlock" Margin="12"
                    RelativePanel.AlignLeftWithPanel="True" RelativePanel.Below="GivenNameTextBlock" />
-        <TextBlock Text="{Binding FamilyName}" RelativePanel.RightOf="FamilyNameTextBlock"
+            <TextBlock Text="{Binding FamilyName}" RelativePanel.RightOf="FamilyNameTextBlock"
                    RelativePanel.AlignVerticalCenterWith="FamilyNameTextBlock"/>
-        <TextBlock Text="Email:" x:Name="EmailTextBlock" Margin="12"
+            <TextBlock Text="Email:" x:Name="EmailTextBlock" Margin="12"
                    RelativePanel.AlignLeftWithPanel="True" RelativePanel.Below="FamilyNameTextBlock" />
-        <TextBlock Text="{Binding Email}" RelativePanel.RightOf="EmailTextBlock"
+            <TextBlock Text="{Binding Email}" RelativePanel.RightOf="EmailTextBlock"
                    RelativePanel.AlignVerticalCenterWith="EmailTextBlock"/>
-        <TextBlock Text="Registration:" x:Name="RegistrationBlock" Margin="12"
+            <TextBlock Text="Registration:" x:Name="RegistrationBlock" Margin="12"
                    RelativePanel.AlignLeftWithPanel="True" RelativePanel.Below="EmailTextBlock" />
-        <TextBlock Text="{Binding RegistrationInfo}" RelativePanel.RightOf="RegistrationBlock"
+            <TextBlock Text="{Binding RegistrationInfo}" RelativePanel.RightOf="RegistrationBlock"
                    RelativePanel.AlignVerticalCenterWith="RegistrationBlock"/>
-        <Button Name="RequestServiceButton" Content="Get my reservations" Command="{Binding RequestServiceCommand}" Margin="12"
+            <Button Name="RequestServiceButton" Content="Get my reservations" Command="{Binding RequestServiceCommand}" Margin="12"
                 RelativePanel.Below="RegistrationBlock"/>
-        <Button Name="SignOutButton" Content="Sign out" Command="{Binding SignOutWithAADCommand}" Margin="12"
+            <Button Name="SignOutButton" Content="Sign out" Command="{Binding SignOutWithAADCommand}" Margin="12"
                 RelativePanel.Below="RequestServiceButton"/>
-    </RelativePanel>
+        </RelativePanel>
+
+    </StackPanel>
+    
 </views:BasePage>
