--- a/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
@@ -1,25 +1,31 @@
-﻿<Page
-    x:Class="MSHU.CarWash.UWP.Views.Registrations"
+﻿<views:BasePage
+    x:Class="MSHU.CarWash.UWP.Views.RegistrationsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:MSHU.CarWash.UWP.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="using:MSHU.CarWash.UWP.Views"
+    xmlns:converters="using:MSHU.CarWash.UWP.Converters"
     mc:Ignorable="d">
 
-    <Page.Resources>
+    <views:BasePage.Resources>
+
+        <converters:CalendarViewDayItemConverter x:Key="dayItemConverter" />
 
         <Style x:Key="CalendarViewDayItemStyle1" TargetType="CalendarViewDayItem">
             <Setter Property="MinWidth" Value="35"/>
             <Setter Property="MinHeight" Value="35"/>
             <Setter Property="Margin" Value="1"/>
             <Setter Property="Padding" Value="0, 0, 0, 4"/>
+            <Setter Property="DataContext" Value="{Binding}" />
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="CalendarViewDayItem">
                         <StackPanel VerticalAlignment="Bottom">
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <TextBlock Text="2" FontSize="11"/>
+                                <TextBlock Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource dayItemConverter}, ConverterParameter={Binding Path=DataContext}}" 
+                                           FontSize="11"/>
                                 <TextBlock Text=" free slot(s)" FontSize="11"/>
                             </StackPanel>
                         </StackPanel>
@@ -28,11 +34,12 @@
             </Setter>
         </Style>
 
-    </Page.Resources>
+    </views:BasePage.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <CalendarView HorizontalAlignment="Stretch" Margin="10,10,10,100" 
-                      VerticalAlignment="Stretch" 
+                      VerticalAlignment="Stretch"
+                      DataContext="{Binding}"
                       CalendarViewDayItemStyle="{StaticResource CalendarViewDayItemStyle1}"
                       DisplayMode="Month"
                       FirstDayOfWeek="Monday"
@@ -40,6 +47,7 @@
                       OutOfScopeBackground="Transparent"
                       CalendarItemBackground="#FFDDEBF7"
                       DayItemFontSize="11"
+                      CalendarViewDayItemChanging="CalendarView_CalendarViewDayItemChanging"
                       />
     </Grid>
-</Page>
+</views:BasePage>
