AppShell style modified.
Related Work Items: #54

--- a/src/MSHU.CarWash.UWP/Views/About.xaml
+++ b/src/MSHU.CarWash.UWP/Views/About.xaml
@@ -10,7 +10,7 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <RelativePanel>
             <TextBlock Text="About" />
-            <TextBlock Text="Power by Premier Support for Development" Margin="12"
+            <TextBlock Text="Powered by Premier Support for Development" Margin="12"
                        FontSize="14" FontWeight="Bold" FontStyle="Italic" 
                        RelativePanel.AlignBottomWithPanel="True" RelativePanel.AlignRightWithPanel="True" />
         </RelativePanel>
