--- a/src/MSHU.CarWash.UWP/Views/HomePage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/HomePage.xaml
@@ -8,7 +8,7 @@
     xmlns:views="using:MSHU.CarWash.UWP.Views"
     mc:Ignorable="d">
 
-    <Grid>
+    <Grid Background="White">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
@@ -17,10 +17,6 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <Grid.Background>
-            <ImageBrush Stretch="UniformToFill" Opacity="0.25"
-                    ImageSource="ms-appx:///Assets/Background.png"/>
-        </Grid.Background>
 
         <RelativePanel Grid.Column="0" Background="Transparent">
             <TextBlock Text="User:" x:Name="UserTextBlock" Margin="12"
@@ -48,6 +44,6 @@
         </RelativePanel>
 
     </Grid>
-    
-    
+
+
 </views:BasePage>
