--- a/src/MSHU.CarWash.UWP/Views/MainPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/MainPage.xaml
@@ -10,14 +10,14 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <RelativePanel>
-            <RelativePanel.Background>
+        <RelativePanel Background="{StaticResource BrushDarkBlue}">
+            <!--<RelativePanel.Background>
                 <ImageBrush Stretch="UniformToFill" ImageSource="ms-appx:///Assets/Background.png"/>
-            </RelativePanel.Background>
-            <TextBlock RelativePanel.AlignHorizontalCenterWithPanel="True"
+            </RelativePanel.Background>-->
+            <TextBlock RelativePanel.AlignHorizontalCenterWithPanel="True" Foreground="White"
                        RelativePanel.Above="LoginTextBlock" Text="Welcome!" x:Name="WelComeTextBlock"
                        FontSize="24" Margin="8"/>
-            <TextBlock RelativePanel.AlignHorizontalCenterWithPanel="True"
+            <TextBlock RelativePanel.AlignHorizontalCenterWithPanel="True" Foreground="White"
                        RelativePanel.AlignVerticalCenterWithPanel="True" FontSize="15" Margin="8"
                        Text="Please login to access application functionality!" x:Name="LoginTextBlock" />
             <Button RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0" x:Name="LoginAADButton"
@@ -28,7 +28,7 @@
             </Button>
             <Button RelativePanel.AlignHorizontalCenterWithPanel="True" Padding="0" Margin="0,8,0,0"
                     RelativePanel.Below="LoginAADButton" Content="Login with Microsoft account"
-                    IsEnabled="False">
+                    IsEnabled="False" Foreground="White">
             </Button>
         </RelativePanel>
     </Grid>
