--- a/src/MSHU.CarWash.UWP/Views/ExtendedSplash.xaml
+++ b/src/MSHU.CarWash.UWP/Views/ExtendedSplash.xaml
@@ -25,7 +25,7 @@
         <TextBlock x:Name="m_StatusText" Text="Initializing..." Foreground="White"></TextBlock>
     </StackPanel>
     <StackPanel Grid.Row="1" VerticalAlignment="Bottom" HorizontalAlignment="Center">
-        <TextBlock x:Name="m_PoweredByText" Foreground="White" 
+        <TextBlock x:Name="m_PoweredByText" Foreground="White" Margin="0,0,0,12"
                    Text="Premier Support for Development" FontStyle="Italic" />
     </StackPanel>
 </Grid>
