--- a/src/MSHU.CarWash.UWP/Views/HomePage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/HomePage.xaml
@@ -8,39 +8,20 @@
     xmlns:views="using:MSHU.CarWash.UWP.Views"
     mc:Ignorable="d">
 
-    <Grid Background="White">
+    <Grid Background="White" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-
-        <RelativePanel Grid.Column="0" Background="Transparent">
-            <TextBlock Text="User:" x:Name="UserTextBlock" Margin="12"
-                   RelativePanel.AlignLeftWithPanel="True" RelativePanel.AlignTopWithPanel="True" />
-            <TextBlock Text="Given name:" x:Name="GivenNameTextBlock" Margin="12"
-                   RelativePanel.AlignLeftWithPanel="True" RelativePanel.Below="UserTextBlock" />
-            <TextBlock Text="{Binding GivenName}" RelativePanel.RightOf="GivenNameTextBlock"
-                   RelativePanel.AlignVerticalCenterWith="GivenNameTextBlock"/>
-            <TextBlock Text="Family name:" x:Name="FamilyNameTextBlock" Margin="12"
-                   RelativePanel.AlignLeftWithPanel="True" RelativePanel.Below="GivenNameTextBlock" />
-            <TextBlock Text="{Binding FamilyName}" RelativePanel.RightOf="FamilyNameTextBlock"
-                   RelativePanel.AlignVerticalCenterWith="FamilyNameTextBlock"/>
-            <TextBlock Text="Email:" x:Name="EmailTextBlock" Margin="12"
-                   RelativePanel.AlignLeftWithPanel="True" RelativePanel.Below="FamilyNameTextBlock" />
-            <TextBlock Text="{Binding Email}" RelativePanel.RightOf="EmailTextBlock"
-                   RelativePanel.AlignVerticalCenterWith="EmailTextBlock"/>
+        <local:SignOutControl Grid.Row="0"/>
+        <RelativePanel Grid.Column="0" Grid.Row="1" Background="Transparent">
             <TextBlock Text="Registration:" x:Name="RegistrationBlock" Margin="12"
-                   RelativePanel.AlignLeftWithPanel="True" RelativePanel.Below="EmailTextBlock" />
+                   RelativePanel.AlignLeftWithPanel="True" />
             <TextBlock Text="{Binding RegistrationInfo}" RelativePanel.RightOf="RegistrationBlock"
                    RelativePanel.AlignVerticalCenterWith="RegistrationBlock"/>
-            <Button Name="RequestServiceButton" Content="Get my reservations" Command="{Binding RequestServiceCommand}" Margin="12"
-                RelativePanel.Below="RegistrationBlock"/>
-            <Button Name="SignOutButton" Content="Sign out" Command="{Binding SignOutWithAADCommand}" Margin="12"
-                RelativePanel.Below="RequestServiceButton"/>
         </RelativePanel>
 
     </Grid>
