--- a/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
+++ b/src/MSHU.CarWash.UWP/Views/RegistrationsPage.xaml
@@ -15,6 +15,7 @@
         <converters:CalendarViewDayItemConverter x:Key="dayItemConverter" />
         <converters:ReferenceToVisibilityConverter x:Key="reservationDetailsViewConverter" />
         <converters:InverseReferenceToVisibilityConverter x:Key="inverseRef2VisConverter" />
+        <converters:ButtonsDisplayModeConverter x:Key="buttonsDisplayModeConverter" />
 
         <Style x:Key="CalendarViewDayItemStyle1" TargetType="CalendarViewDayItem">
             <Setter Property="MinWidth" Value="35"/>
@@ -108,7 +109,8 @@
                 <controls:ReservationDetailsView Grid.Row="1" Margin="12,0,12,12"
                                                  Visibility="{Binding CurrentReservation, Converter={StaticResource reservationDetailsViewConverter}}"
                                                  SaveCommand="{Binding SaveReservationChangesCommand}"
-                                                 CancelCommand="{Binding CancelReservationChangesCommand}"/>
+                                                 CancelCommand="{Binding CancelReservationChangesCommand}"
+                                                 DisplayMode="{Binding CurrentReservation, Converter={StaticResource buttonsDisplayModeConverter}}"/>
 
                 <Button Grid.Row="1" Content="Create new reservation" Margin="12,0,12,12"
                         Visibility="{Binding CurrentReservation, Converter={StaticResource inverseRef2VisConverter}}"
